<resources>
    <string name="app_name">TriaryApp</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="exercise">Exercise</string>
    <string name="date_text_view_hint">No date is chosen</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="local_button_text">Offline use</string>
    <string name="training_tab_button">Power</string>
    <string name="running_tab_button">Cardio</string>
    <string name="training_exercises_fragment_name">Training exercises</string>
    <string name="create_training_fragment_name">Create training</string>
    <string name="training_dates_fragment_name">Training dates</string>
    <string name="training_fragment_title">Training</string>
    <string name="create_exercise_fragment_name">Create exercise</string>
    <string name="update_exercise_fragment_name">Update exercise</string>
    <string name="running_fragment_title">Running</string>
    <string name="update_running_fragment_name">Update running</string>
    <string name="date_chooser_title">Date</string>
    <string name="enter_running_name_toast">Enter running name</string>
    <string name="running_created_toast">Running successfully created!</string>
    <string name="running_updated_toast">Running successfully updated!</string>
    <string name="create_date_fragment">Create date</string>
    <string name="exercises_fragment">Exercises</string>
    <string name="enter_training_name_toast">Enter training name</string>
    <string name="training_created_toast">Training created!</string>
    <string name="training_updated_toast">Training updated!</string>
    <string name="delete_button_text">DELETE</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="delete_warning">Delete this record from database (cannot be undone)?</string>
    <string name="select_date_button_text">Select date</string>
    <string name="confirm_date_button_text">Confirm date</string>
    <string name="exercise_hint_text">Exercise name</string>
    <string name="comments_hint_text">Comments</string>
    <string name="repetitions">reps</string>
    <string name="weight">weight</string>
    <string name="set_1">Set 1</string>
    <string name="set_2">Set 2</string>
    <string name="set_3">Set 3</string>
    <string name="set_4">Set 4</string>
    <string name="set_5">Set 5</string>
    <string name="running_distance">Running distance, km</string>
    <string name="speed">Speed, km/h</string>
    <string name="running_time">Running time, minutes</string>
    <string name="calories_lost">Calories lost</string>
    <string name="main_screen_fragment_workouts">Workouts</string>
    <string name="settings_profile_title">Profile</string>

    <!-- Dialog buttons -->
    <string name="dialog_ok">Ok</string>

    <!-- Actions -->
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>

    <!-- Power training list -->
    <string name="training_list_training_add_button">Add training</string>
    <string name="training_list_training_creation_dialog_message">Create training</string>
    <string name="training_list_training_creation_dialog_name_input_hint">Training name</string>
    <string name="training_list_training_creation_dialog_description_input_hint">Training description</string>

    <!---->
    <!-- Training details -->
    <!---->
    <string name="training_details">Training details</string>
    <string name="training_detail_exercise_list">Exercises</string>
    <string name="training_detail_exercise_pack_list">Packs of exercises</string>
    <string name="training_detail_dates_list">Training dates</string>

    <!-- Exercise list -->
    <string name="training_detail_exercise_add_button">Add exercise</string>

    <!-- Exercise -->
    <string name="training_detail_exercise_created_toast">Exercise successfully created!</string>
    <string name="training_detail_exercise_updated_toast">Exercise successfully updated!</string>
    <string name="training_detail_exercise_create_exercise">Create exercise</string>
    <string name="training_detail_exercise_update_exercise">Update exercise</string>
    <string name="training_detail_exercise_name_hint">Exercise name</string>
    <string name="training_detail_exercise_description_hint">Exercise description</string>

    <!-- Exercise pack list -->
    <string name="training_detail_exercise_pack_add_button">Add pack</string>

    <!-- Exercise pack -->
    <string name="training_detail_pack_created_toast">Pack successfully created!</string>
    <string name="training_detail_pack_updated_toast">Pack successfully updated!</string>
    <string name="training_detail_pack_create_exercise">Create Pack</string>
    <string name="training_detail_pack_update_exercise">Update Pack</string>
    <string name="training_detail_pack_name_hint">Pack name</string>
    <string name="training_detail_pack_description_hint">Pack description</string>

    <!-- Day list -->
    <string name="training_detail_date_add_button">Add date</string>

</resources>